tour create and order updates

--- a/tour-create.html
+++ b/tour-create.html
@@ -311,11 +311,14 @@
                           <label class="form-label" for="hostel-address_uz"
                             >СТАТУС ТРАНСПОРТ</label
                           >
-                          <select name="" id="" class="form-select">
-                            <option value="1">business</option>
-                            <option value="1">comfort</option>
-                            <option value="1">standart</option>
-                          </select>
+                          <input
+                            type="text"
+                            id="hostel-address_uz"
+                            class="form-control"
+                            name="address_uz"
+                            maxlength="50"
+                            value=""
+                          />
                         </div>
                         <div class="mb-3 col-md-3 col-6">
                           <label class="form-label" for="hostel-address_uz"
@@ -381,11 +384,14 @@
                           <label class="form-label" for="hostel-address_uz"
                             >СТАТУС ТРАНСПОРТ</label
                           >
-                          <select name="" id="" class="form-select">
-                            <option value="1">business</option>
-                            <option value="1">comfort</option>
-                            <option value="1">standart</option>
-                          </select>
+                          <input
+                            type="text"
+                            id="hostel-address_uz"
+                            class="form-control"
+                            name="address_uz"
+                            maxlength="50"
+                            value=""
+                          />
                         </div>
                         <div class="mb-3 col-md-3 col-6">
                           <label class="form-label" for="hostel-address_uz"
@@ -689,52 +695,6 @@
                       </div>
                       <div>
                         <button class="btn btn-success" href="./tour.html">добавлять</button>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card mb-4">
-                    <div class="card-body">
-                      <div class="row">
-                        <div class="col-md-6 mb-3">
-                          <label class="form-label" for="hostel-address_uz"
-                            >Страхование</label
-                          >
-                          <input
-                            type="text"
-                            id="hostel-address_uz"
-                            class="form-control"
-                          />
-                        </div>
-                        <div class="col-md-6 mb-3">
-                          <label class="form-label" for="hostel-address_uz"
-                            >Количество</label
-                          >
-                          <input
-                            type="number"
-                            id="hostel-address_uz"
-                            class="form-control"
-                          />
-                        </div>
-                        <div class="col-md-6 mb-3">
-                          <label class="form-label" for="hostel-address_uz"
-                            >от</label
-                          >
-                          <input
-                            type="date"
-                            id="hostel-address_uz"
-                            class="form-control"
-                          />
-                        </div>
-                        <div class="col-md-6 mb-3">
-                          <label class="form-label" for="hostel-address_uz"
-                            >до</label
-                          >
-                          <input
-                            type="date"
-                            id="hostel-address_uz"
-                            class="form-control"
-                          />
-                        </div>
                       </div>
                     </div>
                   </div>
@@ -809,15 +769,19 @@
                               <th>Дополнительные услуги</th>
                               <th>от</th>
                               <th>до</th>
+                              <th>количество</th>
+                              <th>цена</th>
                               <th></th>
                             </tr>
                           </thead>
                           <tbody>
                             <tr>
                               <td>1</td>
-                              <td>Трансфер: Airport-Hotel-Airport(NHA TRANG)</td>
+                              <td>Страхование</td>
                               <td>04.06.2024</td>
                               <td>04.06.2024</td>
+                              <td>2</td>
+                              <td>$50</td>
                               <td>
                                 <button class="btn btn-icon btn-success">
                                     <i class="fas fa-pen"></i>
@@ -829,6 +793,18 @@
                             </tr>
                             <tr>
                               <td></td>
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="text"
+                                  value="" />
+                              </td>
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="text"
+                                  value="" />
+                              </td>
                               <td>
                                 <input
                                   class="form-control"
@@ -942,7 +918,7 @@
                           /><label
                             class="form-label mb-0 ms-2"
                             for="groups-is_active"
-                            >группировать по гостинице</label
+                            >инвалидная коляска</label
                           >
                         </div>
                         <div>
