--- a/tour-order.html
+++ b/tour-order.html
@@ -280,13 +280,14 @@
                           <tbody>
                             <tr>
                               <td>
-                                <select class="form-select" name="" id="">
-                                  <option value="0"></option>
-                                  <option value="1">Tashkent</option>
-                                  <option value="2">Dubai</option>
-                                  <option value="3">USA</option>
-                                  <option value="4">Baku</option>
-                                </select>
+                                <input
+                                  type="text"
+                                  id="hostel-name_uz"
+                                  class="form-control"
+                                  name="name_uz"
+                                  maxlength="255"
+                                  value=""
+                                />
                               </td>
                               <td>05.06.2024</td>
                               <td>2</td>
@@ -302,13 +303,14 @@
                           <tbody>
                             <tr>
                               <td>
-                                <select class="form-select" name="" id="">
-                                  <option value="0"></option>
-                                  <option value="1">Tashkent</option>
-                                  <option value="2">Dubai</option>
-                                  <option value="3">USA</option>
-                                  <option value="4">Baku</option>
-                                </select>
+                                <input
+                                  type="text"
+                                  id="hostel-name_uz"
+                                  class="form-control"
+                                  name="name_uz"
+                                  maxlength="255"
+                                  value=""
+                                />
                               </td>
                               <td>05.06.2024</td>
                               <td>2</td>
@@ -323,7 +325,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="card mb-3">
+                  <!-- <div class="card mb-3">
                     <div class="card-body">
                       <div class="table-responsive mb-4">
                         <h6>Страхование</h6>
@@ -345,7 +347,7 @@
                         </table>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                   <h6>Информация о туристе 1</h6>
                   <div class="card mb-3">
                     <div class="card-body">
@@ -386,18 +388,6 @@
                         </div>
                         <div class="col-md-4 col-6 mb-3">
                           <label class="form-label" for="hostel-name_uz"
-                            >Отчество по-латински</label
-                          ><input
-                            type="text"
-                            id="hostel-name_uz"
-                            class="form-control"
-                            name="name_uz"
-                            maxlength="255"
-                            value=""
-                          />
-                        </div>
-                        <div class="col-md-4 col-6 mb-3">
-                          <label class="form-label" for="hostel-name_uz"
                             >Дата рождения</label
                           ><input
                             type="date"
@@ -406,16 +396,6 @@
                             name="name_uz"
                             value=""
                           />
-                        </div>
-                        <div class="col-md-4 mb-3">
-                          <label class="form-label" for="hostel-address_uz"
-                            >Страна рождения</label
-                          >
-                          <select name="" id="" class="form-select">
-                            <option value="1">Uzbekistan</option>
-                            <option value="1">India</option>
-                            <option value="1">Dubai</option>
-                          </select>
                         </div>
                         <div class="col-md-4 mb-3">
                           <label class="form-label" for="hostel-address_uz"
@@ -429,29 +409,17 @@
                         </div>
                         <div class="col-md-4 mb-3">
                           <label class="form-label" for="hostel-address_uz"
-                            >Тип документа</label
+                            >заграничный паспорт</label
                           >
                           <select name="" id="" class="form-select">
-                            <option value="1">Uzbekistan</option>
-                            <option value="1">India</option>
-                            <option value="1">Dubai</option>
+                            <option value="1"></option>
+                            <option value="1"></option>
+                            <option value="1"></option>
                           </select>
                         </div>
                         <div class="col-md-4 col-6 mb-3">
                           <label class="form-label" for="hostel-name_uz"
-                            >Серия документа</label
-                          ><input
-                            type="text"
-                            id="hostel-name_uz"
-                            class="form-control"
-                            name="name_uz"
-                            maxlength="255"
-                            value=""
-                          />
-                        </div>
-                        <div class="col-md-4 col-6 mb-3">
-                          <label class="form-label" for="hostel-name_uz"
-                            >Номер документа</label
+                            >серия загранпаспортов</label
                           ><input
                             type="text"
                             id="hostel-name_uz"
@@ -472,16 +440,15 @@
                             value=""
                           />
                         </div>
-                        <div class="col-md-4 col-6 mb-3">
-                          <label class="form-label" for="hostel-name_uz"
-                            >Документ выдан</label
-                          ><input
-                            type="date"
-                            id="hostel-name_uz"
-                            class="form-control"
-                            name="name_uz"
-                            value=""
-                          />
+                        <div class="col-md-4 mb-3">
+                          <label class="form-label" for="hostel-address_uz"
+                            >виза</label
+                          >
+                          <select name="" id="" class="form-select">
+                            <option value="1"></option>
+                            <option value="1"></option>
+                            <option value="1"></option>
+                          </select>
                         </div>
                         <div class="col-md-4 mb-3">
                           <div class="d-flex">
@@ -695,9 +662,34 @@
                             </div>
                           </div>
                         </div>
+                        <div class="col-md-4">
+                          <div class="form-check">
+                            <label class="form-check-label" for="defaultCheck3">
+                              с родителем
+                            </label>
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              value=""
+                              id="defaultCheck3"
+                            />
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
+                  <div class="form-check mb-4">
+                    <label class="form-check-label" for="defaultCheck3">
+                      младенец
+                    </label>
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      value=""
+                      id="defaultCheck3"
+                    />
+                  </div>
+
                   <h6>Примечание к заявке</h6>
                   <div class="card mb-3">
                     <div class="card-body">
@@ -791,6 +783,167 @@
                     </div>
                   </div>
                   <h6>Цена</h6>
+                  <div class="card mb-4">
+                    <div class="card-body">
+                      <div class="table-responsive mb-4">
+                        <table class="table table-striped table-hover">
+                          <thead>
+                            <tr>
+                              <th>#</th>
+                              <th>Тип номера</th>
+                              <th>от</th>
+                              <th>до</th>
+                              <th>количество</th>
+                              <th>Цена</th>
+                              <th></th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr>
+                              <td>1</td>
+                              <td>
+                                2Adl
+                              </td>
+                              <td>04.06.2024</td>
+                              <td>04.06.2024</td>
+                              <td>1</td>
+                              <td>$200</td>
+                              <td>
+                                <button class="btn btn-icon btn-success">
+                                    <i class="fas fa-pen"></i>
+                                </button
+                                ><button class="btn btn-icon btn-danger">
+                                    <i class="fas fa-trash"></i>
+                                </button>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td></td>
+                                <td>
+                                  <select name="" id="" class="form-select">
+                                    <option value="1">2Adl</option>
+                                    <option value="1">3Adl</option>
+                                    <option value="1">Chld</option>
+                                    <option value="1">Inf</option>
+                                  </select>
+                                </td>
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="text"
+                                  value="" />
+                              </td>
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="text"
+                                  value="" />
+                              </td>
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="text"
+                                  value="" />
+                              </td>
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="text"
+                                  value="" />
+                              </td>
+                              <td>
+                                <button
+                                  type="submit"
+                                  class="btn btn-icon btn-success">
+                                  <i class="fa-solid fa-plus"></i>
+                                </button>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                  <h6>ДОПОЛНИТЕЛЬНЫЕ УСЛУГИ</h6>
+                  <div class="card mb-4">
+                    <div class="card-body">
+                      <div class="table-responsive mb-4">
+                        <table class="table table-striped table-hover">
+                          <thead>
+                            <tr>
+                              <th>#</th>
+                              <th>дополнительные услуги</th>
+                              <th>от</th>
+                              <th>до</th>
+                              <th>количество</th>
+                              <th>Цена</th>
+                              <th></th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr>
+                              <td>1</td>
+                              <td>
+                                виза
+                              </td>
+                              <td>04.06.2024</td>
+                              <td>04.06.2024</td>
+                              <td>1</td>
+                              <td>$200</td>
+                              <td>
+                                <button class="btn btn-icon btn-success">
+                                    <i class="fas fa-pen"></i>
+                                </button
+                                ><button class="btn btn-icon btn-danger">
+                                    <i class="fas fa-trash"></i>
+                                </button>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td></td>
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="text"
+                                  value="" />
+                              </td> 
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="text"
+                                  value="" />
+                              </td>
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="text"
+                                  value="" />
+                              </td>
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="text"
+                                  value="" />
+                              </td>
+                              <td>
+                                <input
+                                  class="form-control"
+                                  type="text"
+                                  value="" />
+                              </td>
+                              <td>
+                                <button
+                                  type="submit"
+                                  class="btn btn-icon btn-success">
+                                  <i class="fa-solid fa-plus"></i>
+                                </button>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
                   <div class="row">
                     <div class="col-md-5">
                       <div class="card">
