--- a/tour-create.html
+++ b/tour-create.html
@@ -455,10 +455,17 @@
                           <label class="form-label" for="hostel-address_uz"
                             >питание</label
                           >
-                          <select name="" id="" class="form-select">
-                            <option value="1">BB</option>
-                            <option value="1">PP</option>
-                          </select>
+                          <div class="d-flex">
+                            <select name="" id="" class="form-select me-2">
+                              <option value="1">BB</option>
+                              <option value="1">PP</option>
+                            </select>
+                            <input
+                              type="number"
+                              id="hostel-address_uz"
+                              class="form-control"
+                            />
+                          </div>
                         </div>
                         <div class="mb-3 col-md-3 col-6">
                           <label class="form-label" for="hostel-address_uz"
