--- a/tour.html
+++ b/tour.html
@@ -725,6 +725,8 @@
                             <th>Vaqtlar</th>
                             <th>&nbsp;</th>
                             <th>Kecha</th>
+                            <th>питание</th>
+                            <th>Xonalar</th>
                             <th>Narxi</th>
                             <th>Biletlar</th>
                             <th>Ketish joyi</th>
@@ -746,6 +748,8 @@
                               </button>
                             </td>
                             <td>14</td>
+                            <td>BB</td>
+                            <td>2Adl</td>
                             <td>15 750 000</td>
                             <td>12 / 45</td>
                             <td>Toshkent</td>
@@ -772,6 +776,8 @@
                               </button>
                             </td>
                             <td>14</td>
+                            <td>BB</td>
+                            <td>1Adl</td>
                             <td>15 750 000</td>
                             <td>12 / 45</td>
                             <td>Toshkent</td>
@@ -798,6 +804,8 @@
                               </button>
                             </td>
                             <td>14</td>
+                            <td>BB</td>
+                            <td>3Adl</td>
                             <td>13 600 000</td>
                             <td>40 / 45</td>
                             <td>Andijon</td>
@@ -824,6 +832,8 @@
                               </button>
                             </td>
                             <td>14</td>
+                            <td>BB</td>
+                            <td>2Adl</td>
                             <td>12 800 000</td>
                             <td>44 / 45</td>
                             <td>Toshkent</td>
