--- a/tour-order.html
+++ b/tour-order.html
@@ -280,14 +280,7 @@
                           <tbody>
                             <tr>
                               <td>
-                                <input
-                                  type="text"
-                                  id="hostel-name_uz"
-                                  class="form-control"
-                                  name="name_uz"
-                                  maxlength="255"
-                                  value=""
-                                />
+                                Reys nomi
                               </td>
                               <td>05.06.2024</td>
                               <td>2</td>
@@ -299,18 +292,12 @@
                           <div>Ручная кладь: <span>8 КГ</span></div>
                           <div>Bagaj: <span>20kg</span></div>
                         </div>
+                        <hr>
                         <table class="table table-striped table-hover">
                           <tbody>
                             <tr>
                               <td>
-                                <input
-                                  type="text"
-                                  id="hostel-name_uz"
-                                  class="form-control"
-                                  name="name_uz"
-                                  maxlength="255"
-                                  value=""
-                                />
+                                Reys nomi
                               </td>
                               <td>05.06.2024</td>
                               <td>2</td>
@@ -779,88 +766,6 @@
                             class="form-control"
                           ></textarea>
                         </div>
-                      </div>
-                    </div>
-                  </div>
-                  <h6>Цена</h6>
-                  <div class="card mb-4">
-                    <div class="card-body">
-                      <div class="table-responsive mb-4">
-                        <table class="table table-striped table-hover">
-                          <thead>
-                            <tr>
-                              <th>#</th>
-                              <th>Тип номера</th>
-                              <th>от</th>
-                              <th>до</th>
-                              <th>количество</th>
-                              <th>Цена</th>
-                              <th></th>
-                            </tr>
-                          </thead>
-                          <tbody>
-                            <tr>
-                              <td>1</td>
-                              <td>
-                                2Adl
-                              </td>
-                              <td>04.06.2024</td>
-                              <td>04.06.2024</td>
-                              <td>1</td>
-                              <td>$200</td>
-                              <td>
-                                <button class="btn btn-icon btn-success">
-                                    <i class="fas fa-pen"></i>
-                                </button
-                                ><button class="btn btn-icon btn-danger">
-                                    <i class="fas fa-trash"></i>
-                                </button>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td></td>
-                                <td>
-                                  <select name="" id="" class="form-select">
-                                    <option value="1">2Adl</option>
-                                    <option value="1">3Adl</option>
-                                    <option value="1">Chld</option>
-                                    <option value="1">Inf</option>
-                                  </select>
-                                </td>
-                              <td>
-                                <input
-                                  class="form-control"
-                                  type="text"
-                                  value="" />
-                              </td>
-                              <td>
-                                <input
-                                  class="form-control"
-                                  type="text"
-                                  value="" />
-                              </td>
-                              <td>
-                                <input
-                                  class="form-control"
-                                  type="text"
-                                  value="" />
-                              </td>
-                              <td>
-                                <input
-                                  class="form-control"
-                                  type="text"
-                                  value="" />
-                              </td>
-                              <td>
-                                <button
-                                  type="submit"
-                                  class="btn btn-icon btn-success">
-                                  <i class="fa-solid fa-plus"></i>
-                                </button>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
                       </div>
                     </div>
                   </div>
